2013-04-18 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, VERSION:
	   Version 2.07 (APRX27)

	* aprx.8.in:
	   Document "myloc" and "$myloc", "filter m/100", etc.

	* aprx.c, aprx.h:
	    Variables for myloc_lat, myloc_lon, and string forms.

	* config.c:
	    Parse "myloc lat xx long yy" entry.
	    Moved couple tool functions here from beacon.c.

	* filter.c:
	    Support "m/100", if top-level configuration has
	    "myloc lat xx lon yy" entry.

	* beacon.c:
	    new "macro" definition of "$myloc", which takes
	    lat+lon of top-level configuration "myloc.." entry.

	* interface.c:
	    Recognizing incoming messages targeted to this server
	    (by $mycall, and transmit interface callsigns.)
	    Processing them by rudimentary acknowledgement, and
	    optional place to actually process them.
	    Actual processing is still not written.

2013-02-02 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* ttyreader.c:
	    Improve the error report, when serial port opening failed.

	* filter.c:
	    Coverity reports over aprsc reflect directly to aprx too.
	    We use same code in parts...

2012-12-29 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c, aprx.h, historydb.h:
	    Track digipeated messages by source callsign.

	* aprsis.c:
	    Use A->rdlin_len  instead of strlen(A->rdline)

	* aprx-stat.c, aprx.c, aprx.h, erlang.c:
	    Moved syslog init from erlang to aprx core.

	* parse_aprs.c, aprx.h:
	    Function parse_aprs_message() for planned future use.

2012-12-09 Matt Maguire VK2RQ <matt.vk2rq@gmail.com>

	* telemetry.c:
	    Sometimes the Erlang registery contains interface
	    entries that are no longer actually in the system.
	    Avoid NULL referral at such situations.

2012-11-09 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* dprsgw.c:
	    Better accounting on DPRS side-channel data occupancy,
	    assuming the DPRS gw does send bytes all the time.

2012-11-09 FUJIURA Toyonori JG2RZF <toyokun@gmail.com>
